# Tecnical_Project_ROMANO_P38000363

./: README.md
multirobot_control/: CMakeLists.txt  package.xml
multirobot_control/config/: iiwa_controllers.yaml  initial_positions.yaml
multirobot_control/config/install/: local_setup.sh  setup.sh
multirobot_control/launch/: spawn_world.launch.py
multirobot_control/scripts/: hold_iiwa_position.py
multirobot_control/urdf/: camera_ignition.xacro  fra2mo_with_camera.urdf.xacro  iiwa_camera.xacro  iiwa_gazebo_custom.xacro  iiwa_with_camera.urdf.xacro
multirobot_control/worlds/: empty_world_with_walls.world
multirobot_coordinator/: README.md  package.xml  setup.cfg  setup.py
multirobot_coordinator/config/: aruco_config.yaml  scanner_config.yaml
multirobot_coordinator/gazebo/models/aruco_tag_10/: model.config  model.sdf
multirobot_coordinator/gazebo/models/aruco_tag_15/: model.sdf
multirobot_coordinator/gazebo/models/aruco_tag_20/: model.sdf
multirobot_coordinator/gazebo/models/aruco_tag_5/: model.config  model.sdf
multirobot_coordinator/launch/: bringup.launch.py
multirobot_coordinator/multirobot_coordinator/: fra2mo_executor_node.py  iiwa_scanner_node.py  task_allocator_node.py
ros2_fra2mo/config/: navigation.yaml  slam.yaml
ros2_fra2mo/launch/: fra2mo_navigation.launch.py  fra2mo_slam.launch.py
ros2_fra2mo/maps/: arena_map.pgm  arena_map.yaml  arena_map_rotated.pgm  arena_map_rotated.yaml  rotate_map.py
ros2_fra2mo/src/: odom_bl_tf.cpp
ros2_fra2mo/urdf/: fra2mo.urdf.xacro  fra2mo_base_macro.xacro
(+9 files in other folders)
